#*****************************************************************************
# meson.options (seq66)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     seq66
# \author      Chris Ahlstrom
# \date        2026-04-23
# \updates     2026-06-01
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "seq66" application and libraries.
#
#  Options for seq66.  Still very tentative.
#
#-----------------------------------------------------------------------------

option('alsa',
   type : 'boolean',
   value : true,
   description : 'Add ALSA to the MIDI API list in Linux builds.'
)

option('jack',
   type : 'boolean',
   value : true,
   description : 'Add JACK to the MIDI API list in Linux builds.'
)

# JACK session is DEPRECATED.

option('jacksession',
   type : 'boolean',
   value : false,
   description : 'Add JACK session support.'
)

option('jacktransport',
   type : 'boolean',
   value : true,
   description : 'Build JACK transport code.'
)

option('nsm',
   type : 'boolean',
   value : true,
   description : 'Enable the use of NSM and liblo.'
)

option('tests',
   type : 'boolean',
   value : false,                            # TODO
   description : 'Build the test program(s).'
)

option('portmidi',
   type : 'boolean',
   value : false,
   description : 'Enable the use of the PortMIDI-based engine.'
)

option('rtmidi',
   type : 'boolean',
   value : true,
   description : 'Enable the use of the RtMIDI-based engine.'
)

option('cli',
   type : 'boolean',
   value : true,
   description : 'Enable the build of the command-line application.'
)

option('gui',
   type : 'boolean',
   value : true,
   description : 'Enable the build of the Qt GUI application.'
)

option('docs',
   type : 'boolean',
   value : false,
   description : 'Build the LaTeX/PDF documentation.'
   )

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : '',
   description : 'Directory where Seq66 documentation is installed.',
   yield : true
)

option('potext',
   type : 'boolean',
   value : false,
   description : 'Build the linkage test program with potext_support.'
)

#****************************************************************************
# meson.options (seq66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
